fixed layout alignment

--- a/src/styles/components/blog.scss
+++ b/src/styles/components/blog.scss
@@ -2,6 +2,10 @@
 	padding: 50px 0;
 }
 
+.blog-grid {
+	margin: 0;
+}
+
 .blog-item {
 	padding: 50px;
 	height: 300px;
